...
        switch self {
        case .Numeric(let val):
            return "\(val)"
        case .Delete:
            return "⌫"
        case .Enter:
            return "SUBMIT"
        }
    }
}

class NumpadButton: UIButton {
    
...
