...
                    <color key="backgroundColor" red="1" green="0.74117647058823533" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="250" id="FRO-pC-CES"/>
                        <constraint firstAttribute="height" constant="50" id="uVN-oT-zGp"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                    <state key="normal" title="Check">
                        <color key="titleColor" red="0.36470588235294116" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                            <integer key="value" value="3"/>
                        </userDefinedRuntimeAttribute>
...
